@@ -88,7 +88,6 @@ ADD_SUBDIRECTORY(Templates)
 # Packing
 #
 
-INCLUDE(ManageArchive)
 INCLUDE(ManageRPM)
 IF(RPM_BUILD_SOURCES)
     SET(SOURCE_ARCHIVE_DIR ${RPM_BUILD_SOURCES})
